Fix search height on small devices and upscale people's avatars (#1058)
* Fix search height on small devices and upscale people's avatars

--- a/src/components/Header/Search/Search.module.css
+++ b/src/components/Header/Search/Search.module.css
@@ -169,6 +169,7 @@
     height: fit-content;
     transform: translateX(-50%);
     padding: var(--space-8x);
+    max-height: 80vh;
   }
   .queryResults {
     grid-template-columns: 1fr 1fr;
@@ -184,7 +185,7 @@
     display: block;
   }
   .resultsWrapper {
-    max-height: calc(640px - 112px);
+    max-height: calc(80vh - 115px);
   }
 
   .modalDivider {
